force-app/main/default/objects/PlantIQ_Target_Set__e/PlantIQ_Target_Set__e.object-meta.xml
<CustomObject>
    <label>PlantIQ Target Set</label>
    <pluralLabel>PlantIQ Target Set</pluralLabel>
</CustomObject>