force-app/main/default/objects/PlantIQ_Target_Set__e/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <label>Plant Code</label>
    <type>Text</type>
    <length>10</length>
</CustomField>