force-app/main/default/objects/PlantIQ_Target_Set__e/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Text</type>
    <length>10</length>
</CustomField>