force-app/main/default/objects/PlantIQ_Target_Set__e/fields/Shop_Name__c.field-meta.xml
<CustomField>
    <fullName>Shop_Name__c</fullName>
    <label>Shop Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>