force-app/main/default/objects/PlantIQ_Target_Set__e/fields/Target_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Id__c</fullName>
    <label>Target Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>